--- a/requirements.txt
+++ b/requirements.txt
@@ -2,25 +2,34 @@ absl-py==0.7.0
 astor==0.7.1
 atomicwrites==1.3.0
 attrs==18.2.0
+certifi==2019.3.9
+chardet==3.0.4
 decorator==4.3.2
+future==0.17.1
 gast==0.2.2
 grpcio==1.18.0
+gym==0.12.1
 h5py==2.9.0
+idna==2.8
 Keras-Applications==1.0.7
 Keras-Preprocessing==1.0.8
 Markdown==3.0.1
+mock==3.0.5
 more-itertools==5.0.0
 networkx==2.2
 numpy==1.16.1
 pluggy==0.8.1
 protobuf==3.6.1
 py==1.7.0
+pyglet==1.3.2
 pytest==4.2.0
+requests==2.21.0
 scipy==1.2.0
 six==1.12.0
-tensorboard==1.12.2
-tensorflow==1.12.0
--e git+https://github.com/tensorforce/tensorforce@085fab2c132e3d12ef3d0f6eaf361b22446f5c35#egg=Tensorforce
+tensorboard==1.13.1
+tensorflow==1.13.1
+tensorflow-estimator==1.13.0
 termcolor==1.1.0
 tqdm==4.30.0
+urllib3==1.24.3
 Werkzeug==0.14.1
